Fixed grid overflow + added title header

--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,8 @@
   /* border: 1px solid black; */
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: center;
+  align-items: center; */
   width: 560px;
   height: 560px;
   margin: 0 auto;
@@ -16,20 +16,31 @@ body {
   height: 100vh;
   margin: 0;
   flex-direction: column;
+  background-color: gray;
 }
 
 .grid-row {
   display: flex;
+  background-color: white;
 }
 
 .grid-square {
-  /* width: 40px; 
-  height: 40px;  */
   border: 1px solid #000;
+  box-sizing: border-box;
 }
 
 .button-container {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  margin-bottom: 20px;
+}
+
+.button-container button {
+  font-size: larger;
+  margin: auto 10px;
+}
+
+h1 {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
